# avoutput-adaptation-layer-mock

./: CMakeLists.txt  README.md
files/pkgconfig/: aval-impl.pc.in
src/: logging.h
src/aval/: aval_audio_impl.cpp  aval_audio_impl.h  aval_impl.cpp  aval_impl.h  aval_settings_impl.cpp  aval_settings_impl.h  aval_video_impl.cpp  aval_video_impl.h
